z-index Fixed

--- a/assets/index-Ol0VJZTA.css
+++ b/assets/index-Ol0VJZTA.css
@@ -1178,7 +1178,7 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .CardsContentClass2 {
-  z-index: 50;
+  z-index: 40;
   display: flex;
   flex-direction: column;
   gap: 20px;
